chore: add zk create2Address

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pollum-io/v1-sdk",
   "license": "MIT",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "🛠 An SDK for building applications on top of Pegasys V2",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -29,12 +29,13 @@
     "@ethersproject/solidity": "^5.0.0",
     "@pollum-io/sdk-core": "0.0.4",
     "tiny-invariant": "^1.1.0",
-    "tiny-warning": "^1.0.3"
+    "tiny-warning": "^1.0.3",
+    "zksync-web3": "^0.17.1"
   },
   "devDependencies": {
+    "@pollum-io/pegasys-protocol": "0.0.17",
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
-    "@pollum-io/pegasys-protocol": "0.0.17",
     "tsdx": "^0.14.1"
   },
   "engines": {
